--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-python
-numpy
-pandas
-opencv-python
-scikit-image
+numpy==1.24.2
+pandas==1.5.3
+opencv-python==4.7.0.68
+scikit-image==0.19.3
+tensorflow==2.11.0
+streamlit==1.18.1
